src/test/deca/syntax/invalid/homemade/test/test_lex_inv_espace_dans_int.deca
// Test d'un espace dans un entier
{
    int a = 1 2;
}